# FinalProj

./: Computer_Graphics - Shortcut.lnk
FinalProj/: CMakeLists.txt
FinalProj/FinalProj/: box.frag  box.vert  main.cpp  s.vert  s2.frag  s2.vert
FinalProj/FinalProj/building/: building.cpp  building.h
FinalProj/FinalProj/light/: light.cpp  light.h
FinalProj/FinalProj/model/: model.cpp  model.frag  model.h  model.vert  scene2.gltf  shrub_04_2k.gltf
FinalProj/FinalProj/road/: road.cpp  road.h
FinalProj/FinalProj/skybox/: skybox.cpp  skybox.h
FinalProj/FinalProj/windmill/: blades.cpp  blades.h  windmill.cpp  windmill.frag  windmill.h  windmill.vert
